# fairwater-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.rest
api/: pyproject.toml  test.rest
api/src/: _deprecated_gdp_data.py  agency_score.py  all_countries_in_the_world.py  country_data.py  final_scores.py  known_country_names.py  main.py
api/src/data/: countries.json  gdp.json  iso-countries.json
api/src/data/hex/: API_AG.LND.PRCP.MM_DS2_en_csv_v2_356.csv  DC_TOF_WASHL.csv  EG_TBA_H2CO.csv  EG_TBA_H2COAQ.csv  EG_TBA_H2CORL.csv  EN_WBE_HMWTL.csv  EN_WWT_GEN.csv  EN_WWT_TREAT.csv  EN_WWT_TREATR.csv  EN_WWT_TREATR_SF.csv  EN_WWT_TREAT_SF.csv  EN_WWT_WWDS.csv  ER_H2O_IWRMD.csv  ER_H2O_IWRMD_EE.csv  ER_H2O_IWRMD_FI.csv  ER_H2O_IWRMD_IP.csv  ER_H2O_IWRMD_MI.csv  ER_H2O_IWRMP.csv  ER_H2O_PRDU.csv  ER_H2O_RURP.csv  ER_H2O_WUEYST.csv  ER_WAT_PART.csv  ER_WAT_PRDU.csv  Fair Water - NGDPDPC (1).csv  SH_H2O_SAFE.csv  SH_SAN_DEFECT.csv  SH_SAN_HNDWSH.csv  SH_SAN_SAFE.csv  global_temp_simple.csv
src/: main.py
