[project]
name = "fairwater-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pablo Juele", email = "webdesignpablojuele@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.110.2",
    "pycountry>=23.12.11",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# packages = ["src/fairwater_api"]
